Fixed issue with navigation  margin on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,6 +122,9 @@ header nav li {
   header h2 {
     margin-bottom: 15px;
   }
+  header nav {
+    margin: 0;
+  }
 }
 
 /* Hero Styles */
